quorum/test/tests/TypeChecker/Pass/ImpAssignTextTextObj.quorum
Text t
t:SetValue("t")
text txt = t