quorum/test/tests/TypeChecker/Fail/ImpAssignNumberTextObj.quorum
Text t
t:setValue()
number n = t